feat: create structure and styles

--- a/index.html
+++ b/index.html
@@ -7,5 +7,43 @@
     <link rel="stylesheet" href="style.css" />
     <title>Page event</title>
   </head>
-  <body></body>
+  <body>
+    <div class="banner">
+      <h1>Welcome to Tomorrowland</h1>
+      <img src="assets/banner.jpg" alt="Banner" />
+    </div>
+    <div class="photos">
+      <img src="assets/img1.jpg" alt="Photo 1" />
+      <img src="assets/img2.jpg" alt="Photo 2" />
+      <img src="assets/img3.jpg" alt="Photo 3" />
+    </div>
+    <div class="photos">
+      <img src="assets/img4.jpg" alt="Photo 4" />
+      <img src="assets/img5.jpg" alt="Photo 5" />
+      <img src="assets/img6.jpg" alt="Photo 6" />
+    </div>
+    <p>
+      Tomorrowland é um festival de música realizado anualmente. Sua edição
+      original é realizada em Boom na Bélgica, cidade com menos de 20 mil
+      habitantes, no distrito de Antuérpia. A edição brasileira foi anunciada em
+      20 de julho de 2014, e foi realizada na cidade de Itu, São Paulo, até
+      2016. Nos Estados Unidos, contava com outro nome, TomorrowWorld. Sendo a
+      edição norte-americana realizada, até 2015, na cidade de Atlanta, Geórgia.
+      Em 2019, o festival teve sua primeira edição de Inverno, na França.
+    </p>
+    <h2>Cadastre-se para garantir seus ingressos!</h2>
+    <form>
+      <input type="text" placeholder="Nome Completo" />
+      <input type="email" placeholder="Email" />
+      <input type="date" placeholder="00/00/0000" />
+      <input type="tel" placeholder="(00)00000-0000" />
+      <button>Cadastrar</button>
+    </form>
+    <footer>
+      <p>
+        Criado por
+        <a href="https://github.com/AdrianoMartins23">Adriano Martins</a>
+      </p>
+    </footer>
+  </body>
 </html>
